--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "json-server": "^1.0.0-beta.2",
+    "prettier": "3.3.3",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
   }
